Bug 205253 - find messages (global): double LMB click is not consistent with open message
Summary: find messages (global): double LMB click is not consistent with open message
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: search (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 192923 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-08-26 22:31 UTC by Maciej Pilichowski
Modified: 2009-08-28 00:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maciej Pilichowski 2009-08-26 22:31:19 UTC
Version:            (using KDE 4.3.0)
Installed from:    SuSE RPMs

The find messages dialog:
a) double LMB click on the message -> message shows up in separate window
b) "open message" button -> message is selected in the main KMail window

Bug.

1) the behaviour should be consistent
2) the behaviour should depend on Kmail settings -- if user uses "embedded" preview the (b) behaviour is correct, if not (a) (in both cases)
Comment 1 FiNeX 2009-08-26 22:46:48 UTC
It looks like the search list behave like the messages list.
Comment 2 Maciej Pilichowski 2009-08-26 23:02:37 UTC
Yes, true. Btw. in KDE3 Kmail worked correctly (at least for me, because I use preview mode).
Comment 3 Martin Koller 2009-08-27 22:01:05 UTC
SVN commit 1016433 by mkoller:

BUG: 205253

Fix inconsistent selection behavior in "Find Messages" window:
- Selecting a mail updates the message preview (if there is one) and
  does not open a new window for the selected mail
- Double clicking and the button "open message" opens the mail in a new window

This also fixes the problems:
- double clicking no longer opens three mail reader windows when no message preview
  is shown
- changing the shown message in the message preview no longer flickers
  due to now checking if the folder containing the selected mail is already shown,
  which also fixes the problem that when you clicked a currently shown folder the second time
  on the folder tree, the current message shown was cleared.



 M  +3 -0      folderview.cpp  
 M  +0 -2      kmmainwidget.cpp  
 M  +3 -3      searchwindow.cpp  
 M  +1 -1      searchwindow.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1016433
Comment 4 Martin Koller 2009-08-27 22:03:16 UTC
SVN commit 1016436 by mkoller:

Backport r1016433 by mkoller from trunk to the 4.3 branch:

CCBUG: 205253

Fix inconsistent selection behavior in "Find Messages" window:
- Selecting a mail updates the message preview (if there is one) and
  does not open a new window for the selected mail
- Double clicking and the button "open message" opens the mail in a new window

This also fixes the problems:
- double clicking no longer opens three mail reader windows when no message preview
  is shown
- changing the shown message in the message preview no longer flickers
  due to now checking if the folder containing the selected mail is already shown,
  which also fixes the problem that when you clicked a currently shown folder the second time
  on the folder tree, the current message shown was cleared.




 M  +3 -0      folderview.cpp  
 M  +0 -2      kmmainwidget.cpp  
 M  +3 -3      searchwindow.cpp  
 M  +1 -1      searchwindow.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1016436
Comment 5 Martin Koller 2009-08-28 00:22:40 UTC
*** Bug 192923 has been marked as a duplicate of this bug. ***