BUG: 205253

Fix inconsistent selection behavior in "Find Messages" window:
- Selecting a mail updates the message preview (if there is one) and
  does not open a new window for the selected mail
- Double clicking and the button "open message" opens the mail in a new window

This also fixes the problems:
- double clicking no longer opens three mail reader windows when no message preview
  is shown
- changing the shown message in the message preview no longer flickers
  due to now checking if the folder containing the selected mail is already shown,
  which also fixes the problem that when you clicked a currently shown folder the second time
  on the folder tree, the current message shown was cleared.


svn path=/trunk/KDE/kdepim/; revision=1016433